--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1,32 +1,35 @@
 html, body {
-  @apply bg-black;
-  scroll-behavior: smooth;
+  @apply bg-black h-full scroll-smooth font-default font-regular text-gray-300;
 }
 
-/* Disable dragging images */
+#app {
+  @apply h-full;
+}
+
 img {
-  -webkit-user-drag: none;
-}
-
-* {
-  font-family: 'Open Sans', sans-serif;
-  @apply text-gray-400;
+  @apply drag-none select-none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Poppins', sans-serif;
-  @apply text-white;
+  @apply text-white font-light;
+}
+
+h1 {
+  @apply text-4xl;
+}
+
+h2 {
+  @apply text-3xl;
+}
+
+h3 {
+  @apply text-2xl;
 }
 
 h6 {
   @apply text-xl;
 }
 
-.blur {
-  filter: blur(4px);
-}
-
-/* Utility to properly place an element with position: absolute */
-.center {
-  @apply transform -translate-x-1/2 -translate-y-1/2;
+a:hover {
+  @apply text-white;
 }
