Add language selector

--- a/src/assets/styles/fontello.css
+++ b/src/assets/styles/fontello.css
@@ -58,3 +58,5 @@
 .icon-globe:before { content: '\e800'; } /* '' */
 .icon-down-open-big:before { content: '\e801'; } /* '' */
 .icon-mail:before { content: '\e802'; } /* '' */
+.icon-left-open-big:before { content: '\e803'; } /* '' */
+.icon-ok-circled:before { content: '\f06d'; } /* '' */
