--- a/src/assets/styles/fontello.css
+++ b/src/assets/styles/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.eot?88422567');
-  src: url('../fonts/fontello.eot?88422567#iefix') format('embedded-opentype'),
-       url('../fonts/fontello.woff2?88422567') format('woff2'),
-       url('../fonts/fontello.woff?88422567') format('woff'),
-       url('../fonts/fontello.ttf?88422567') format('truetype'),
-       url('../fonts/fontello.svg?88422567#fontello') format('svg');
+  src: url('../fonts/fontello.eot?59198318');
+  src: url('../fonts/fontello.eot?59198318#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff2?59198318') format('woff2'),
+       url('../fonts/fontello.woff?59198318') format('woff'),
+       url('../fonts/fontello.ttf?59198318') format('truetype'),
+       url('../fonts/fontello.svg?59198318#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?88422567#fontello') format('svg');
+    src: url('../font/fontello.svg?59198318#fontello') format('svg');
   }
 }
 */
@@ -59,4 +59,4 @@
 .icon-down-open-big:before { content: '\e801'; } /* '' */
 .icon-mail:before { content: '\e802'; } /* '' */
 .icon-left-open-big:before { content: '\e803'; } /* '' */
-.icon-ok-circled:before { content: '\f06d'; } /* '' */
+.icon-ok:before { content: '\e804'; } /* '' */
